--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^5.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.4",
-    "react-router-dom": "^6.30.3"
+    "react-router-dom": "^6.30.3",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
